Bug 437948 - kdesvn crash on after pressing Close button
Summary: kdesvn crash on after pressing Close button
Status: RESOLVED FIXED
Alias: None
Product: kdesvn
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.1.0
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: KDESvn default assignee
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2021-06-01 09:59 UTC by Tim
Modified: 2021-06-06 19:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim 2021-06-01 09:59:59 UTC
Application: kdesvn (2.1.0)

Qt Version: 5.15.2
Frameworks Version: 5.82.0
Operating System: Linux 5.4.0-73-generic x86_64
Windowing System: X11
Drkonqi Version: 5.21.5
Distribution: KDE neon User Edition 5.21

-- Information about the crash:
- What I was doing when the application crashed:

I just clicked the "Close" button to close the open SVN repo in "kdesvn" - everything was working alright until this point. Once I pressed the "Close" button, the "kdesvn" main window, which was showing the open SVN repository data (3 pane, one window, default layout), disappeared. I then received the notification that the application unexpectedly quit.

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: kdesvn (kdesvn), signal: Segmentation fault

[New LWP 39451]
[New LWP 39452]
[New LWP 39453]
[New LWP 39454]
[New LWP 39455]
[New LWP 39456]
[New LWP 40430]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
0x00007f8021096aff in __GI___poll (fds=0x7ffdb93cd7a8, nfds=1, timeout=1000) at ../sysdeps/unix/sysv/linux/poll.c:29
[Current thread is 1 (Thread 0x7f801d63c8c0 (LWP 39449))]

Thread 8 (Thread 0x7f7ffbd4e700 (LWP 40430)):
#0  0x00007f800016ed44 in __errno_location@plt () from /usr/lib/x86_64-linux-gnu/pulseaudio/libpulsecommon-13.99.so
#1  0x00007f8000180982 in pa_read () from /usr/lib/x86_64-linux-gnu/pulseaudio/libpulsecommon-13.99.so
#2  0x00007f8000204416 in pa_mainloop_prepare () from /lib/x86_64-linux-gnu/libpulse.so.0
#3  0x00007f8000204eb4 in pa_mainloop_iterate () from /lib/x86_64-linux-gnu/libpulse.so.0
#4  0x00007f8000204f70 in pa_mainloop_run () from /lib/x86_64-linux-gnu/libpulse.so.0
#5  0x00007f800021311d in ?? () from /lib/x86_64-linux-gnu/libpulse.so.0
#6  0x00007f80001af72c in ?? () from /usr/lib/x86_64-linux-gnu/pulseaudio/libpulsecommon-13.99.so
#7  0x00007f8020616609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#8  0x00007f80210a3293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 7 (Thread 0x7f80037fe700 (LWP 39456)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x557c25bb3278) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x557c25bb3228, cond=0x557c25bb3250) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x557c25bb3250, mutex=0x557c25bb3228) at pthread_cond_wait.c:638
#3  0x00007f800ed5eb5b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#4  0x00007f800ed5e75b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#5  0x00007f8020616609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f80210a3293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 6 (Thread 0x7f8003fff700 (LWP 39455)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x557c25bb3278) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x557c25bb3228, cond=0x557c25bb3250) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x557c25bb3250, mutex=0x557c25bb3228) at pthread_cond_wait.c:638
#3  0x00007f800ed5eb5b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#4  0x00007f800ed5e75b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#5  0x00007f8020616609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f80210a3293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 5 (Thread 0x7f80088fd700 (LWP 39454)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x557c25bb3278) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x557c25bb3228, cond=0x557c25bb3250) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x557c25bb3250, mutex=0x557c25bb3228) at pthread_cond_wait.c:638
#3  0x00007f800ed5eb5b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#4  0x00007f800ed5e75b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#5  0x00007f8020616609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f80210a3293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7f80090fe700 (LWP 39453)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x557c25bb3278) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x557c25bb3228, cond=0x557c25bb3250) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x557c25bb3250, mutex=0x557c25bb3228) at pthread_cond_wait.c:638
#3  0x00007f800ed5eb5b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#4  0x00007f800ed5e75b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#5  0x00007f8020616609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f80210a3293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7f80098ff700 (LWP 39452)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x557c25bb20c8) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x557c25bb2078, cond=0x557c25bb20a0) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x557c25bb20a0, mutex=0x557c25bb2078) at pthread_cond_wait.c:638
#3  0x00007f800ed5eb5b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#4  0x00007f800ed5e75b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#5  0x00007f8020616609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f80210a3293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f8016e15700 (LWP 39451)):
#0  __GI___libc_read (nbytes=16, buf=0x7f8016e14aa0, fd=7) at ../sysdeps/unix/sysv/linux/read.c:26
#1  __GI___libc_read (fd=7, buf=0x7f8016e14aa0, nbytes=16) at ../sysdeps/unix/sysv/linux/read.c:24
#2  0x00007f801fc9db2f in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f801fc54ebe in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f801fc55312 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f801fc554a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f802167cffb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f80216211eb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f802143ba52 in QThread::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007f8020b6ef4b in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#10 0x00007f802143cbec in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#11 0x00007f8020616609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#12 0x00007f80210a3293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f801d63c8c0 (LWP 39449)):
[KCrash Handler]
#4  0x00007f80215ef8be in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f80215ef966 in QSortFilterProxyModel::mapToSource(QModelIndex const&) const () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f80158c0e01 in MainTreeWidgetData::sourceNode (left=false, index=..., this=<optimized out>) at ./src/svnfrontend/maintreewidget.cpp:96
#7  MainTreeWidgetData::sourceNode (left=false, index=..., this=<optimized out>) at ./src/svnfrontend/maintreewidget.cpp:91
#8  MainTreeWidget::SelectionList (this=0x557c25a33250) at ./src/svnfrontend/maintreewidget.cpp:389
#9  0x00007f80158c3259 in MainTreeWidget::enableActions (this=0x557c25a33250) at ./src/svnfrontend/maintreewidget.cpp:700
#10 0x00007f80158c8a5b in MainTreeWidget::closeMe (this=0x557c25a33250) at ./src/svnfrontend/maintreewidget.cpp:879
#11 0x00007f8015872584 in kdesvnView::closeMe (this=0x557c25a38800) at ./src/kdesvnview.cpp:196
#12 0x00007f801587011e in kdesvnpart::closeUrl (this=0x557c25a30a90) at ./src/kdesvn_part.cpp:256
#13 0x0000557c24ebb4c4 in kdesvn::fileClose (this=0x557c258629f0) at ./src/kdesvn.cpp:249
#14 0x00007f8021659730 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#15 0x00007f80222668e6 in QAction::triggered(bool) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#16 0x00007f8022268fb8 in QAction::activate(QAction::ActionEvent) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#17 0x00007f80223661f0 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#18 0x00007f8022366415 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#19 0x00007f802245d50e in QToolButton::mouseReleaseEvent(QMouseEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#20 0x00007f80222afc06 in QWidget::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#21 0x00007f802245d5b8 in QToolButton::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#22 0x00007f802226cdc3 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#23 0x00007f8022275e77 in QApplication::notify(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#24 0x00007f80216226da in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#25 0x00007f80222750a7 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#26 0x00007f80222cae54 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#27 0x00007f80222ce174 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#28 0x00007f802226cdc3 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#29 0x00007f8022275bb8 in QApplication::notify(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#30 0x00007f80216226da in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#31 0x00007f8021b2f4e8 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#32 0x00007f8021b30b55 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#33 0x00007f8021b087ac in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#34 0x00007f801cf60d7e in ?? () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#35 0x00007f801fc5517d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#36 0x00007f801fc55400 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#37 0x00007f801fc554a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#38 0x00007f802167cfe2 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#39 0x00007f80216211eb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#40 0x00007f8021629394 in QCoreApplication::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#41 0x0000557c24eb9d0d in main (argc=<optimized out>, argv=<optimized out>) at ./src/main.cpp:89
[Inferior 1 (process 39449) detached]

Possible duplicates by query: bug 323576, bug 275662, bug 273653, bug 259161, bug 178201.

Reported using DrKonqi
Comment 1 Christian Ehrlicher 2021-06-06 19:19:28 UTC
A subdirectory must be selected in the left pane and a file in the right one, then closing the repo let kdesvn crash.
Comment 2 Christian Ehrlicher 2021-06-06 19:23:38 UTC
Git commit e6785f6e2c412d0cac08d8431ec05e6741472caf by Christian Ehrlicher.
Committed on 06/06/2021 at 19:17.
Pushed by chehrlic into branch 'master'.

Don't crash when closing a repository.

M  +2    -1    src/svnfrontend/maintreewidget.cpp

https://invent.kde.org/sdk/kdesvn/commit/e6785f6e2c412d0cac08d8431ec05e6741472caf
Comment 3 Christian Ehrlicher 2021-06-06 19:26:08 UTC
Git commit 13555ad276de25c7736934c5a1430053b8fd80f9 by Christian Ehrlicher.
Committed on 06/06/2021 at 19:25.
Pushed by chehrlic into branch '2.1'.

Don't crash when closing a repository.

M  +1    -0    src/svnfrontend/maintreewidget.cpp

https://invent.kde.org/sdk/kdesvn/commit/13555ad276de25c7736934c5a1430053b8fd80f9