Don't crash when closing a repository.

BUG: 437948